Admin area routes

--- a/src/components/HeaderClient/styles.css
+++ b/src/components/HeaderClient/styles.css
@@ -3,3 +3,8 @@
     color: var(--dsc-color-font-primary);
     background-color: var(--dsc-color-bg-secondary);
 }
+
+.dsc-nav {
+    font-size: 14px;
+    font-weight: 700;
+}
